Fix typos and add sudo to service start command

--- a/Setting_up_Spark_Standalone_on_Google_Colab_BigtopEdition.ipynb
+++ b/Setting_up_Spark_Standalone_on_Google_Colab_BigtopEdition.ipynb
@@ -99,7 +99,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Note:** since the current underlying Machine in Colab runs Ubuntu `22.04`, our choice of Bigtop versions is limited to at most `3.3.0`, since starting from Bigtop `3.4.0` only Ubuntu `24.04` is supported.\n",
+        "**Note:** since the current underlying Machine in Colab runs Ubuntu `22.04`, our choice of Bigtop versions is limited to at most `3.3.0`, since ing from Bigtop `3.4.0` only Ubuntu `24.04` is supported.\n",
         "\n",
         "**Note 2:** Bigtop `3.3.0` includes Spark `3.3.4` (here is the [list of all libraries included in the release](https://cwiki.apache.org/confluence/display/BIGTOP/Bigtop+3.3.0+Release). Spark `3.3.4` [runs on Java 8/11/17](https://archive.apache.org/dist/spark/docs/3.3.4), so we do not need to install anything in Colab because it comes with Java 17 pre-installed."
       ],
@@ -477,7 +477,7 @@
         "\n",
         "In order to run a Spark job, we need the core libraries as well as the Spark master and Spark worker. Master and worker in this case are going to run both on the same machine, the localhost.\n",
         "\n",
-        "The package `bigtop-utils` will be used to start the services."
+        "The package `bigtop-utils` will be used to  the services."
       ],
       "metadata": {
         "id": "j8_0tUQ8tesJ"
@@ -571,7 +571,7 @@
         "for p in spark-master spark-worker; do\n",
         "  echo \"Starting $p\"\n",
         "  # systemctl start $p\n",
-        "  service $p start\n",
+        "  sudo service $p start\n",
         "done"
       ],
       "metadata": {
