chore: add sudo to Hadoop/Bigtop setup for CI compatibility

--- a/getting_started_with_mrjob.ipynb
+++ b/getting_started_with_mrjob.ipynb
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "e19ea380-3529-4ee5-b60a-dfbfa62878e2",
       "metadata": {
         "tags": [],
@@ -110,7 +110,7 @@
         "outputId": "4f1bcc5b-0f82-4612-801f-e37b0c9e6493"
       },
       "id": "2uY-Ttg8CUjJ",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +140,7 @@
         "outputId": "e4ef2af4-d120-4aa3-d7f2-721eff9e5734"
       },
       "id": "VAxcYnN6REt3",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,7 +172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "3d1707de-185e-49cb-9919-0a4159c6597f",
       "metadata": {
         "tags": [],
@@ -234,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "b39e21ce-20b1-4052-a021-1f08f72d7a62",
       "metadata": {
         "tags": [],
@@ -292,7 +292,7 @@
         "outputId": "fa1f41a2-4e3d-4ec5-8856-be86c9d75207"
       },
       "id": "Nw7PiUCCExTl",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,7 +332,7 @@
         "outputId": "2eab6cb7-05cd-4ef6-8b7b-9a7473569103"
       },
       "id": "9kywbRgiEz3C",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,7 +356,7 @@
         "outputId": "b583b7b4-3fe3-4037-eb00-e31e76b88862"
       },
       "id": "fUum9kcRFDGw",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,7 +385,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "cc54d254-abd4-41fe-b37c-c0b561422c40",
       "metadata": {
         "colab": {
@@ -446,7 +446,7 @@
         "!wget --no-clobber https://www.gutenberg.org/files/11/11-0.txt -O input.txt"
       ],
       "id": "57ec11b0",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -479,7 +479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "54071cbd-09eb-4eab-b42f-6e393028a5ef",
       "metadata": {
         "colab": {
@@ -519,7 +519,7 @@
         "outputId": "ebe57a76-23b5-4e8b-ceac-e6429f535779"
       },
       "id": "_Fgd7qKNHCH6",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -559,7 +559,7 @@
         "outputId": "dcbdcb81-c15a-4cd5-d3de-54323e3935f0"
       },
       "id": "6L8s3WfT2k3W",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -613,7 +613,7 @@
         "outputId": "3e10b8db-adbe-445c-cd4c-4b80369c7d61"
       },
       "id": "XNGJeuJkO64A",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -649,17 +649,18 @@
       "cell_type": "code",
       "source": [
         "%%bash\n",
-        "# Add Bigtop repository\n",
-        "echo \"Adding Bigtop repository...\"\n",
-        "curl -o /etc/apt/sources.list.d/bigtop-3.2.1.list https://archive.apache.org/dist/bigtop/bigtop-3.3.0/repos/$(lsb_release -is | tr '[:upper:]' '[:lower:]')-$(lsb_release -rs)/bigtop.list\n",
         "\n",
-        "# Download and add the Bigtop GPG key\n",
+        "# Add Bigtop repository (using sudo for curl)\n",
+        "echo \"Adding Bigtop repository...\"\n",
+        "sudo curl -o /etc/apt/sources.list.d/bigtop.list https://archive.apache.org/dist/bigtop/bigtop-3.3.0/repos/$(lsb_release -is | tr '[:upper:]' '[:lower:]')-$(lsb_release -rs)/bigtop.list\n",
+        "\n",
+        "# Download and add the Bigtop GPG key (you already had sudo here, which is good)\n",
         "echo \"Adding Bigtop GPG key...\"\n",
         "wget --no-clobber -qO - https://archive.apache.org/dist/bigtop/bigtop-3.3.0/repos/GPG-KEY-bigtop | sudo apt-key add -\n",
         "\n",
-        "# Update package cache\n",
+        "# Update package cache (needs sudo)\n",
         "echo \"Updating package cache...\"\n",
-        "apt update"
+        "sudo apt-get update"
       ],
       "metadata": {
         "colab": {
@@ -669,7 +670,7 @@
         "outputId": "710d8a3c-a1f5-4cd2-b9af-0081de029f9f"
       },
       "id": "zMmZm-xTMUcL",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -742,7 +743,7 @@
         "outputId": "41cd07ad-c9e6-44fd-95cb-983c60a96ce3"
       },
       "id": "OwR1g-TrRLas",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -927,7 +928,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!apt install -y hadoop-mapreduce hadoop-hdfs-namenode hadoop-hdfs-datanode \\\n",
+        "!sudo apt install -y hadoop-mapreduce hadoop-hdfs-namenode hadoop-hdfs-datanode \\\n",
         "                hadoop-yarn hadoop-yarn-nodemanager hadoop-yarn-resourcemanager"
       ],
       "metadata": {
@@ -938,7 +939,7 @@
         "outputId": "bdc54d07-2c88-4646-b854-bdb45f4b7447"
       },
       "id": "XPanUJrlUigS",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1096,7 +1097,7 @@
       "source": [
         "%%bash\n",
         "\n",
-        "cat > /etc/hadoop/conf/core-site.xml << ⬅️\n",
+        "sudo tee /etc/hadoop/conf/core-site.xml << ⬅️\n",
         "<configuration>\n",
         "    <property>\n",
         "        <name>fs.defaultFS</name>\n",
@@ -1109,7 +1110,7 @@
         "id": "fjiSjI7wLwOp"
       },
       "id": "fjiSjI7wLwOp",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1127,7 +1128,7 @@
       "source": [
         "%%bash\n",
         "\n",
-        "cat > /etc/hadoop/conf/mapred-site.xml << ⬅️\n",
+        "sudo tee /etc/hadoop/conf/mapred-site.xml << ⬅️\n",
         "<configuration>\n",
         "    <property>\n",
         "        <name>mapreduce.framework.name</name>\n",
@@ -1144,7 +1145,7 @@
         "id": "Ws2plAj9ckZx"
       },
       "id": "Ws2plAj9ckZx",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1170,7 +1171,7 @@
         "outputId": "e078b82c-98df-4d2a-ebdc-1ef865078d15"
       },
       "id": "_zR9nrFCO9Is",
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1186,7 +1187,7 @@
       "source": [
         "%%bash\n",
         "\n",
-        "cat > /etc/hadoop/conf/yarn-site.xml << ⬅️\n",
+        "sudo tee /etc/hadoop/conf/yarn-site.xml << ⬅️\n",
         "<configuration>\n",
         "    <property>\n",
         "        <name>yarn.nodemanager.aux-services</name>\n",
@@ -1204,7 +1205,7 @@
         "id": "8qTQxLlQIpGu"
       },
       "id": "8qTQxLlQIpGu",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1231,7 +1232,7 @@
       "cell_type": "code",
       "source": [
         "# erase the HDFS filesystem in case it already exists\n",
-        "!rm -rf /tmp/hadoop-hdfs/ /tmp/hadoop-root/ 2>/dev/null\n",
+        "!sudo rm -rf /tmp/hadoop-hdfs/ /tmp/hadoop-root/ 2>/dev/null\n",
         "\n",
         "# initialize the namenode\n",
         "!sudo -u hdfs hdfs namenode -format"
@@ -1244,7 +1245,7 @@
         "outputId": "ba36b7c9-a581-4b80-e82c-658f66f51d7b"
       },
       "id": "pKXUS-0ic-az",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1352,8 +1353,8 @@
       "cell_type": "code",
       "source": [
         "%%bash\n",
-        "service hadoop-hdfs-namenode start\n",
-        "service hadoop-hdfs-datanode start"
+        "sudo service hadoop-hdfs-namenode start\n",
+        "sudo service hadoop-hdfs-datanode start"
       ],
       "metadata": {
         "colab": {
@@ -1363,7 +1364,7 @@
         "outputId": "7000233b-5aae-4fbc-e7e4-72c574322114"
       },
       "id": "U-muvlAQMCOC",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1413,7 +1414,7 @@
         "outputId": "43393e2a-d9d6-432b-a0cd-dd486f4cffe0"
       },
       "id": "KFEuIQ2aMGug",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1451,7 +1452,7 @@
         "outputId": "6915120f-8eab-4d64-c06a-94fefff7ef38"
       },
       "id": "ZY-mRTv2LYuw",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1528,7 +1529,7 @@
         "outputId": "13b5774f-1b9e-4027-c613-104d15c837af"
       },
       "id": "RWWgE6DYmbaP",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1563,7 +1564,7 @@
         "outputId": "0d8a9fc3-8b1b-448f-a574-7e836ba8c47b"
       },
       "id": "mgkkXYwBe4vd",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1591,16 +1592,16 @@
     {
       "cell_type": "code",
       "source": [
-        "!ln -s /var/log ./\n",
-        "!ln -s /etc/hadoop ./\n",
-        "!ln -s /etc .\n",
-        "!ln -s /lib ."
+        "!sudo ln -fs /var/log ./\n",
+        "!sudo ln -fs /etc/hadoop ./\n",
+        "!sudo ln -fs /etc .\n",
+        "!sudo ln -fs /lib ."
       ],
       "metadata": {
         "id": "U8RHOB6ofpKp"
       },
       "id": "U8RHOB6ofpKp",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1625,7 +1626,7 @@
         "id": "ObO_R-Zmwuyw"
       },
       "id": "ObO_R-Zmwuyw",
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1655,7 +1656,7 @@
         "outputId": "3eb1332e-c307-47e2-b2d0-69829ff0a7ef"
       },
       "id": "ygz9_0K6X2jp",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1688,7 +1689,7 @@
         "outputId": "b8f19f22-d0b2-4ae8-9144-b0a05b439d38"
       },
       "id": "tDk27mmE2U8o",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1883,7 +1884,7 @@
         "outputId": "52d15f5b-13a4-4895-b85c-6f6efd8cd7f2"
       },
       "id": "EIDgc-rRgOGS",
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1910,7 +1911,7 @@
         "outputId": "4567f71c-0ffb-495b-91b7-dcf3ba0e02c6"
       },
       "id": "hMAFzN0c3483",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1946,7 +1947,7 @@
         "outputId": "38f8b883-5edc-4a4e-e32b-8cb912e29b11"
       },
       "id": "PoyeMnvvGnI8",
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2057,7 +2058,7 @@
         "outputId": "f0162d26-0e29-44d9-a63c-8f195d6ed41e"
       },
       "id": "BLzgYItUMAo_",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2099,7 +2100,7 @@
         "outputId": "9fe5234a-4bc4-4060-a3da-b1356624a655"
       },
       "id": "hOXGBSTTF6NL",
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2142,7 +2143,7 @@
         "outputId": "c7556478-1493-47d5-e590-0a2162585c80"
       },
       "id": "JJKafhw1HRsF",
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2167,7 +2168,7 @@
         "outputId": "2d610adb-705c-4b12-873b-8e27a29bfddb"
       },
       "id": "KPWlOGQgOZDQ",
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2234,7 +2235,7 @@
         "outputId": "38a02bfc-64f4-4cb9-fd64-d4f6803df951"
       },
       "id": "g6tXU1dRNt5s",
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2771,7 +2772,7 @@
         "outputId": "a45db816-c3a8-4732-fe77-88ca401b640e"
       },
       "id": "bF-ltZUdMA9u",
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2797,7 +2798,7 @@
         "outputId": "c8e7941a-06e6-47fc-ccd1-109c3bd0dd38"
       },
       "id": "C4Yoz7qqFQdE",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2854,7 +2855,7 @@
         "outputId": "10efd25b-b2c3-4a33-dd40-fdcd9887b1d3"
       },
       "id": "ZjZQNrvpSYp6",
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3080,7 +3081,7 @@
         "outputId": "04a77c33-8030-4af2-dded-07390683eb02"
       },
       "id": "YIDMYoRqSkRV",
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3193,7 +3194,7 @@
         "outputId": "e3ba0fb8-cc1d-4336-cfe5-840a09cb5788"
       },
       "id": "uvexxlRRUEHy",
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3236,7 +3237,7 @@
         "exit 1 # Exit with an error code if the process is not found after retries"
       ],
       "id": "6a1c1165",
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3334,7 +3335,7 @@
         "outputId": "663894c9-cb26-40f3-9411-fafb9032dee2"
       },
       "id": "DMlYGptYVQ3l",
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3380,7 +3381,7 @@
         "outputId": "b6dcfc70-4bb0-43c3-a5fe-d9db116ce491"
       },
       "id": "RP-XtXCCKFeZ",
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3430,7 +3431,7 @@
         "outputId": "2842c7cc-5625-4f57-f4e7-20195c16c3e7"
       },
       "id": "Zykx0nisPwOP",
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3971,7 +3972,7 @@
         "outputId": "ea54f597-e00e-4987-e1ee-6c04f08d7949"
       },
       "id": "u3uthcC1QhCR",
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4014,7 +4015,7 @@
         "outputId": "44880b18-02c3-4198-8379-12f6fa150c34"
       },
       "id": "tews5WWXQkqt",
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
